Opened 9 years ago
Closed 9 years ago
#6210 closed defect (fixed)
sheervideo: 8bv 4:4:4:4 progressive decodes incorrectly
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | sheer |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
interlaced file decodes ok
this is probably similar issue to #5659
C:\>ffmpeg -i C:\YCbCrA_8bv_4_4_4_4_prog.mov -vcodec tiff out.mov
ffmpeg version 3.2.git Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 4.6.2 (GCC)
configuration: --disable-pthreads --disable-ffprobe --enable-gpl
libavutil 55. 47.100 / 55. 47.100
libavcodec 57. 81.100 / 57. 81.100
libavformat 57. 66.102 / 57. 66.102
libavdevice 57. 2.100 / 57. 2.100
libavfilter 6. 74.100 / 6. 74.100
libswscale 4. 3.101 / 4. 3.101
libswresample 2. 4.100 / 2. 4.100
libpostproc 54. 2.100 / 54. 2.100
[sheervideo @ 0237d6c0] Warning: not compiled with thread support, using thread
emulation
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'C:\YCbCrA_8bv_4_4_4_4_prog.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 2017-03-01T17:21:25.000000Z
Duration: 00:00:03.20, start: 0.000000, bitrate: 70078 kb/s
Stream #0:0(eng): Video: sheervideo (Shr2 / 0x32726853), yuva444p(smpte170m/
smpte170m/bt709), 500x500, 70074 kb/s, 25 fps, 25 tbr, 600 tbn, 600 tbc (default
)
Metadata:
creation_time : 2017-03-01T17:21:26.000000Z
handler_name : Procedura obs│ugi skrˇtˇw danych Apple
encoder : Sheer Y'CbCrA 8bu 4:4:4:4p
[sheervideo @ 02766b80] Warning: not compiled with thread support, using thread
emulation
[tiff @ 02374900] Warning: not compiled with thread support, using thread emulat
ion
Output #0, mov, to 'out.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
encoder : Lavf57.66.102
Stream #0:0(eng): Video: tiff (tiff / 0x66666974), rgba, 500x500, q=2-31, 20
0 kb/s, 25 fps, 12800 tbn, 25 tbc (default)
Metadata:
creation_time : 2017-03-01T17:21:26.000000Z
handler_name : Procedura obs│ugi skrˇtˇw danych Apple
encoder : Lavc57.81.100 tiff
Stream mapping:
Stream #0:0 -> #0:0 (sheervideo (native) -> tiff (native))
Press [q] to stop, [?] for help
frame= 28 fps=0.0 q=-0.0 size= 27573kB time=00:00:01.08 bitrate=209133.5kbit
frame= 60 fps=0.0 q=-0.0 size= 59097kB time=00:00:02.36 bitrate=205130.3kbit
frame= 80 fps= 60 q=-0.0 Lsize= 78797kB time=00:00:03.16 bitrate=204269.3kbi
ts/s speed=2.35x
video:78796kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing
overhead: 0.001688%
Attachments (2)
Change History (6)
by , 9 years ago
| Attachment: | YCbCrA_8bv_4_4_4_4_prog.7z added |
|---|
by , 9 years ago
| Attachment: | patchsheerAYbR.diff added |
|---|
comment:1 by , 9 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | sheer added |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:3 by , 9 years ago
Replying to richardpl:
Why not post this to mailing list instead?
I will if you have no quick comment.
comment:4 by , 9 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Should be fixed in 46082c2b3f2158ca3a69b7cd2b105cc763e9c3e7.
Note:
See TracTickets
for help on using tickets.



Guessed patch attached.