lavc/sheervideo: Fix Y prediction for interlaced frames with transparency.

Based on 260de8a2 by Paul B Mahol.
Fixes ticket #6210.